# cfml

./: CMakeLists.txt  build  build.sh  main.c
.cache/clangd/index/: buddy_alloc.h.68B4A7AE74A9EB43.idx  bytecode.h.FCB0AC7DE3A91B31.idx  constant.h.74CE60A68988798C.idx  dissasembler.h.9E73C6B38CEF3B26.idx  hashmap.h.816705A4F134826A.idx  main.c.8A725BDECDDBA56D.idx  memory.h.CB4A1F2822A6D108.idx  objects.h.577EBE94DA639DF3.idx  serializer.c.A633E751F7BD7627.idx  serializer.h.7E4CD53823B158CB.idx  vm.h.00C3DCEBD3879C1E.idx
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  buddy_alloc_test  cmake_install.cmake  fml  hashmap_test  interpreter_test  parser_test
include/: ast.h  buddy_alloc.h  bytecode.h  constant.h  dissasembler.h  hashmap.h  memory.h  objects.h  serializer.h  vm.h
integration_tests/: extends.fml  extends.fml.bc  extends.fml.json  sudoku.fml.bc  sudoku.fml.json  sudoku_out.fml.bc
src/: ast.c  buddy_alloc.c  bytecode.c  constant.c  dissasembler.c  hashmap.c  memory.c  serializer.c  vm.c
tests/: asserts.h  buddy_alloc_test.c  hashmap_test.c  interpreter_test.c  parser_test.c
